# UnsafeBench

./: .gitignore  LICENSE  assess_effectiveness.py  assess_robustness.py  classifiers.py  instructblip_adv_attack.py  llava_adv_attack.py  pyproject.toml  query_vlms.py  readme.md  requirements.txt  setup.sh  setup_lavis_env.sh  unsafe_datasets.py  utils.py  vlms.py
PerspectiveVision/: build_training_set.py  eval.py  train_llava.sh
PerspectiveVision/prompts/: prompt_template.txt
blip_utils/: visual_attacker.py
data/: combined_instruction.txt
lavis/models/: __init__.py
llava/model/: llava_arch.py
llava/model/language_model/: llava_llama.py
llava/train/: train.py
llava_utils/: generator.py  prompt_wrapper.py  visual_attacker.py
