[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llava"
version = "1.0.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "torch",
    "torchvision",
    "fastapi",
    "gradio==3.35.2",
    "markdown2[all]",
    "numpy==1.26.4",
    "requests",
    "sentencepiece==0.1.99",
    "shortuuid",
    "tokenizers>=0.12.1",
    "uvicorn",
    "wandb",
    "httpx==0.24.0",
    "deepspeed==0.9.5",
    "peft==0.4.0",
    "transformers==4.31.0",
    "accelerate==0.26.0",
    "bitsandbytes==0.41.0",
    "scikit-learn==1.2.2",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "timm==0.6.13",
    "datasets",
    "ninja",
    "fire",
    "openai",
    "openpyxl",
]

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]